app/gulp/sass/_statistics.scss
html {
  height: 100%;
  width: 100%;
}

body {
  height: calc(100% - 60px);
  width: 100%;
}

div.tooltip {
  position: absolute;
  text-align: center;
  padding: 2px;
  font: 12px sans-serif;
  background: lightgrey;
  border: 1px;
  border-color: black;
  pointer-events: none;
  opacity: 0.3;
}

